# blindwire

./: .gitignore  CHANGELOG.md  Cargo.toml  PROTOCOL.md  PROTOCOL_STATE_MACHINE.md  PROTOCOL_V2.md  README.md  RELEASE_HASHES.txt  REPRODUCIBLE_BUILDS.md  SIGNALING_SPEC.md  all_tests.txt  check_errors_2.txt  check_errors_3.txt  check_errors_4.txt  check_errors_5.txt  check_errors_6.txt  check_errors_7.txt  check_output.txt  check_output_2.txt  clippy_cli.txt  clippy_output.txt  clippy_server.txt  expiry_only.txt  expiry_test_only.txt  rust-toolchain.toml  test_errors_2.txt  test_output.txt  test_output_v2.txt  testcert.b64  transport_test_errors.txt  transport_test_errors_2.txt  transport_test_errors_3.txt  transport_test_output.txt
.github/workflows/: ci.yml
blindwire-cli/: Cargo.toml
blindwire-cli/src/: main.rs
blindwire-core/: Cargo.toml
blindwire-core/src/: error.rs  frame.rs  invite.rs  lib.rs  noise.rs  sas.rs  state.rs
blindwire-desktop/: package-lock.json  package.json  playwright.config.ts
blindwire-desktop/src/: App.css  App.tsx
blindwire-desktop/src-tauri/: Cargo.toml  tauri.conf.json
blindwire-desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs  tests.rs
blindwire-desktop/tests/: smoke.spec.ts
blindwire-server/: Cargo.toml  check_out_server.txt  check_server_error.txt  compiler_error.txt  stderr.txt  test_expiry_debug.txt  test_final_out.txt  test_final_trust.txt  test_happy.txt  test_out_full.txt
blindwire-server/src/: lib.rs  main.rs
blindwire-server/tests/: level3_integration.rs  signal_tests.rs
blindwire-transport/: Cargo.toml
blindwire-transport/src/: config.rs  error.rs  lib.rs  message.rs  pinning.rs  relay.rs  session.rs
blindwire-transport/tests/: e2e_test.rs  pinning_test.rs
