[package]
name = "blindwire-cli"
version = "2.0.0"
edition = "2021"

[dependencies]
blindwire-core = { path = "../blindwire-core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
crossterm = "0.27"
base64 = "0.21"
url = "2.5"
rand = "0.8"
rustls = { version = "0.22", features = ["ring"] }
rustls-pki-types = "1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0"
tokio-rustls = "0.25"
tempfile = "3"
qrcodegen = "1.8"
