[package]
name = "blindwire-core"
version = "0.1.0"
edition = "2021"
description = "Minimal dissident-grade secure messaging protocol core"
license = "MIT"

# No default features. Explicit dependencies only.
[dependencies]
# Noise protocol implementation
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }

# Explicit memory zeroization
zeroize = { version = "1.7", features = ["derive"] }

# Cryptographic hashing and hex encoding
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
# None yet. Tests use only std.

[features]
default = []

[profile.release]
# Panic = abort reduces binary size and prevents unwinding exploits
panic = "abort"
# LTO for smaller binary and cross-crate optimization
lto = true
# Strip symbols in release
strip = true
