[package]
name = "blindwire-server"
version = "0.1.0"
edition = "2021"

[dependencies]
blindwire-core = { path = "../blindwire-core" }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
dashmap = "5.5"

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
