[package]
name = "blindwire-transport"
version = "2.0.0"
edition = "2021"
description = "High-level async transport for BlindWire secure messaging"
license = "MIT"

[dependencies]
# Core protocol implementation
blindwire-core = { path = "../blindwire-core" }

# Async runtime
tokio = { version = "1", features = ["rt", "net", "sync", "time", "macros"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Stream utilities
futures-util = "0.3"

# Explicit memory zeroization
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"

# TLS (for wss://)
native-tls = "0.2"

[dev-dependencies]
# For integration tests
tokio = { version = "1", features = ["full"] }
blindwire-server = { path = "../blindwire-server" }

[features]
default = []
